# nanolib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: avr_build.yml  clang-format-check.yml  cmake.yml  test_build.yml
arduino_lib/: Gpio.h  Register.h  RegisterValue.h  Timer.h  const_util.h  constexpr_util.h  main.cpp  periph_base.h  register_map.h  type_traits.h
examples/: CMakeLists.txt  gpio.cpp
examples/cmake/: generic-gcc-avr.cmake
examples/src/gpio/: gpio.cpp
examples/src/system/: system.cpp
examples/src/timer/: timer.cpp
examples/src/usart/: custom_conf.cpp  echo.cpp  usart.cpp
include/nanolib/: Gpio.h  System.h  Timer.h  Usart.h  const_util.h
include/nanolib/detail/: RegisterValue.h  const_util.h  periph_base.h  register_map.h  type_traits.h
live_tests/: CMakeLists.txt
live_tests/gpio/: CMakeLists.txt
nanolib/: Gpio.h  Timer.h
nanolib/detail/: const_util.h  register_map.h
test/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  embedded_test.cbp
test/gpio/: CMakeLists.txt  Makefile  cmake_install.cmake  gpio_test-atmega328p.elf  gpio_test-atmega328p.hex  gpio_test-atmega328p.hex.old  gpio_test-atmega328p.lst  gpio_test-atmega328p.map
test/gpio/src/: main.cpp
test/src/: const_util.cpp  register_value.cpp  register_value_enum_concat.cpp  system.cpp  usart.cpp
unit_tests/: CMakeLists.txt  const_util.cpp  register_value.cpp
unit_tests/src/: const_util.cpp  register_value.cpp
